--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -22,6 +22,7 @@ body {
   
 
 
+
   .img-container {
     display: flex;
     flex-direction: column;
@@ -54,7 +55,7 @@ body {
     /* width: 500px; */
     margin: 0 auto; /* Centraliza horizontalmente */
     text-align: center; /* Centraliza o conteúdo dentro do container de botões */}
-  
+
   .btn-custom {
     background-color: rgba(18, 34, 63, 0.404);
     color: white;
@@ -175,4 +176,11 @@ body {
       max-width: 500px; /* Aumenta a largura máxima em telas grandes */
     }
   }
-  
+
+  /* New styles for book info items */
+  .book-info-item {
+    margin-bottom: 15px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #000000;
+    text-align: left;
+  }
